# Ai-Docstring-Generator

./: .gitignore  README.md  TESTING_RESULTS.md  pyproject.toml  setup.py
examples/: .pre-commit-config.yaml  README.md
examples/.github/workflows/: docstring-check.yml
src/docgen/: __init__.py  batch.py  cli.py  config.py  coverage.py  diff.py  formatter.py  interfaces.py  llm.py  models.py  parser.py  patcher.py  prompt.py  walker.py
test_docgen_demo/: calculator.py  incomplete.py  utils.py
tests/: __init__.py  conftest.py  test_setup.py
tests/fixtures/sample_configs/: example_docgen.toml
tests/fixtures/sample_files/: simple_module.py
tests/integration/: __init__.py  test_config_precedence.py  test_end_to_end.py  test_error_scenarios.py  test_github_actions_integration.py  test_precommit_integration.py
tests/property/: __init__.py  test_batch_properties.py  test_cli_properties.py  test_config_defaults.py  test_config_properties.py  test_coverage_properties.py  test_diff_properties.py  test_formatter_properties.py  test_llm_properties.py  test_parser_properties.py  test_patcher_properties.py  test_prompt_properties.py  test_walker_properties.py
tests/unit/: __init__.py  test_batch.py  test_cli.py  test_config.py  test_coverage.py  test_diff.py  test_formatter.py  test_interfaces.py  test_llm.py  test_models.py  test_parser.py  test_patcher.py  test_prompt.py  test_walker.py
